# matrixMultiplication

./: CMakeLists.txt  README.md
cpu/: matrix.cc
gpu/: matrix.cu
